Optimize PosixCommands performance and code quality
- Extract escape sequence processing into separate method for better readability
- Add format caching for date operations to improve performance
- Replace manual loops with stream operations where appropriate
- Add constants for magic numbers (buffer sizes, default values)
- Optimize StringBuilder initialization with capacity hints
- Improve Unicode and octal escape sequence handling
- Add concurrent HashMap for thread-safe format caching
- Refactor date format conversion with lookup map for better performance